--- a/Last-kadai/index.html
+++ b/Last-kadai/index.html
@@ -18,7 +18,7 @@
   <div class="header-label2">
    <span>CONNECT<span>
   </div>
- <a href="file:///Users/kotogenki/Desktop/Last-kadai/a.html">
+ <a href="a.html">
   <div class="header-label3">
    <span>PROFILE<span>
   </div>
@@ -26,7 +26,7 @@
   <div class="header-label4">
    <span>GIVE<span>
   </div>
- <a href="file:///Users/kotogenki/Desktop/Last-kadai/a.html">
+ <a href="a.html">
   <div class="header-text">
      <span>GENKI KOTO</span>   
    </div>
